# SMERiskAnalysis

./: .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  MODEL_CARD.md  Makefile  PERFORMANCE.md  README.md  config.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.cursor/plans/: cashflow_risk_advisor_7d6ea6f6.plan.md
.github/workflows/: ci.yml
app/: __init__.py  models.py  openapi.py  scheduler.py
app/blueprints/advisor/: __init__.py  routes.py
app/blueprints/analytics/: __init__.py  forecast_routes.py  routes.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/auth/: __init__.py  routes.py
app/blueprints/transactions/: __init__.py  routes.py
app/schemas/: __init__.py  api_v1.py
app/services/: advisor.py  analytics.py  forecast.py  forecast_features.py  forecast_training.py  ml_metrics.py
app/static/css/: style.css
app/templates/: base.html  home.html
app/templates/advisor/: index.html
app/templates/analytics/: dashboard.html  forecast.html
app/templates/auth/: login.html  register.html
app/utils/: __init__.py  formatting.py
migrations/: env.py  script.py.mako
migrations/versions/: 001_initial_schema.py
models/: ridge_forecast.pkl
sample_data/: sample_transactions.csv
scripts/: create_tables.py  generate_synthetic_data.py  init_db.sql  retrain_job.py  seed_sample.py  train_forecast_model.py
tests/: conftest.py  test_analytics_service.py  test_api_v1.py  test_forecast_model.py  test_forecast_service.py  test_formatting.py  test_ml_metrics.py  test_performance_queries.py
(+3 files in other folders)
